front/src/app/core/components/side-nav/side-nav.component.scss
@use '@angular/material' as mat;
@use '../../../styles/variables' as *;

:host {
  user-select: none;

  .header-container {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    padding: 8px;
    gap: 16px;
    margin-bottom: 36px;

    mat-icon {
      cursor: pointer;
    }
  }

  .header {
    font-size: 1.5rem;
    font-weight: bold;
  }

  mat-toolbar {
    position: relative;
    z-index: 5;
    background-color: $dark-blue-1;
    height: 64px;
    display: flex;
    align-items: center;
    gap: 16px;
  }

  .content {
    padding: 32px;
    display: flex;
    flex-direction: column;
    gap: 16px;
  }

  mat-sidenav {
    @include mat.elevation(4);
    background-color: $dark-blue-1;
    transition: width 0.3s ease;
  }

  mat-nav-list {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  .navHeader {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 16px;
  }
}

